# llama.cpp

ggml/: CMakeLists.txt
gguf-py/gguf/: constants.py
include/: llama.h
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-model.cpp
src/models/: llama-shard.cpp  llama.cpp  models.h
tools/: CMakeLists.txt
tools/llama-shard-chain/: CMakeLists.txt  main.cpp
tools/llama-shard-receiver/: CMakeLists.txt  main.cpp
tools/llama-shard0/: CMakeLists.txt  main.cpp
tools/llama-shard1/: CMakeLists.txt  main.cpp
tools/llama-single-shard-infer/: CMakeLists.txt  main.cpp
tools/llama-standalone/: CMakeLists.txt  main.cpp
